integration/k8s/ingressRoute.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-redis-admin

spec:
  stripPrefix:
    prefixes:
      - /redis-admin

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redis-admin-websecure
  namespace: default
  labels:
    service: redis-admin
    service-manage-key: redis-admin-stateless

spec:
  entryPoints:
    - websecure

  routes:
    - match: PathPrefix(`/redis-admin`)
      kind: Rule
      services:
        - name: redis-admin
          port: 80
      middlewares:
        - name: strip-redis-admin

  tls: {}
